[gd_scene load_steps=4 format=3 uid="uid://uj2iboogruej"]

[ext_resource type="Script" path="res://script/dex.gd" id="1_1de4t"]
[ext_resource type="PackedScene" uid="uid://8oyce5mvqggj" path="res://scenes/components/dex_preview_component.tscn" id="2_4brt8"]

[sub_resource type="LabelSettings" id="LabelSettings_d7awe"]
font_size = 41

[node name="Dex" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1de4t")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainContainer"]
layout_mode = 2
text = "DEX"
label_settings = SubResource("LabelSettings_d7awe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBox" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MonList" type="ScrollContainer" parent="MainContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBox" type="VBoxContainer" parent="MainContainer/HBox/MonList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MonPrev" parent="MainContainer/HBox" instance=ExtResource("2_4brt8")]
layout_mode = 2
standalone = false

[node name="Label2" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Z(Exit)"
